Added bat scripts

--- a/input/mapping.json
+++ b/input/mapping.json
@@ -1,4 +1,38 @@
 {
   "pornește internet": "porneste_internet.bat",
-  "deschide panou": "dechide_panou.bat"
+  "deschide internet": "porneste_internet.bat",
+  "închide internet": "inchide_internet.bat",
+  "oprește internet": "inchide_internet.bat",
+  "pornește panou": "porneste_panou.bat",
+  "deschide panou": "porneste_panou.bat",
+  "pornește calculator": "porneste_calculator.bat",
+  "deschide calculator": "porneste_calculator.bat",
+  "Închide calculator": "inchide_calculator.bat",
+  "oprește calculator": "inchide_calculator.bat",
+  "pornește linia": "porneste_linia.bat",
+  "deschide linia": "porneste_linia.bat",
+  "Închide linia": "inchide_linia.bat",
+  "oprește linia": "iinchide_linia.bat",
+  "pornește antivirus": "porneste_antivirus.bat",
+  "deschide antivirus": "porneste_antivirus.bat",
+  "pornește editor grafic": "pornește_editor_grafic.bat",
+  "deschide editor grafic": "pornește_editor_grafic.bat",
+  "pornește editor text": "porneste_editor_text.bat",
+  "deschide editor text": "porneste_editor_text.bat",
+  "închide editor text": "inchide_editor_text.bat",
+  "oprește editor text": "inchide_editor_text.bat",
+  "pornește muzica": "porneste_muzica.bat",
+  "deschide muzica": "porneste_muzica.bat",
+  "Închide muzica": "inchide_muzica.bat",
+  "oprește muzica": "inchide_muzica.bat",
+  "pornește panou": "porneste_panou.bat",
+  "deschide panou": "porneste_panou.bat",
+  "pornește sistem": "porneste_sistem.bat",
+  "pornește sistem": "porneste_sistem.bat",
+  "Închide sistem": "inchide_sistem.bat",
+  "oprește sistem": "inchide_sistem.bat",
+  "deschide torent": "porneste_torent.bat",
+  "pornește torent": "porneste_torent.bat",
+  "închide torent": "inchide_torent.bat",
+  "oprește torent": "inchide_torent.bat"
 }
